--- a/motionclap.ipynb
+++ b/motionclap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "4ae449e2-c2af-400a-bdfa-df917392c29c",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "665611bb-04ea-496f-8b45-0e07a6ac00a6",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ed3dac2f-e445-4137-a86f-71eae8375152",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "4fd66f6a-cbdd-49cb-b708-f8c740b915fc",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "dc76ab1e-3cd0-497b-a2df-bbff5903bed3",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "082a3fbd-c11a-49d3-9fb7-9ed8bb03ffb8",
    "metadata": {},
    "outputs": [],
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "id": "8151379a-553e-4cab-ad1c-53eac8e2c60a",
    "metadata": {},
    "outputs": [],
@@ -239,32 +239,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "id": "8bb73304-fce4-4617-842f-19644aeb6670",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def convert_audio(wav: torch.Tensor, sr: int, target_sr: int, target_channels: int):\n",
+    "    assert wav.dim() >= 2, \"Audio tensor must have at least 2 dimensions\"\n",
+    "    assert wav.shape[-2] in [1, 2], \"Audio must be mono or stereo.\"\n",
+    "    *shape, channels, length = wav.shape\n",
+    "    if target_channels == 1:\n",
+    "        wav = wav.mean(-2, keepdim=True)\n",
+    "    elif target_channels == 2:\n",
+    "        wav = wav.expand(*shape, target_channels, length)\n",
+    "    elif channels == 1:\n",
+    "        wav = wav.expand(target_channels, -1)\n",
+    "    else:\n",
+    "        raise RuntimeError(\n",
+    "            f\"Impossible to convert from {channels} to {target_channels}\"\n",
+    "        )\n",
+    "    wav = torchaudio.transforms.Resample(sr, target_sr)(wav)\n",
+    "    return wav"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1010dab3-5268-4a11-925f-2a205a7ada1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import librosa\n",
+    "import torchaudio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "3fdf094d-13cd-4450-8459-6e2d366c00c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wav, sr = torchaudio.load(\"/srv/hays-lab/scratch/sanisetty3/motionx/audio/beat/1_wayne_0_1_1.wav\")\n",
+    "audio_data = convert_audio(wav, sr, 24000, 1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "11fee7ce-c1b0-4d77-adcc-1863c07f4f88",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([8000.], device='cuda:0')"
+       "array([ 9.1423317e-08, -2.2472341e-07,  9.7488737e-08, ...,\n",
+       "        3.1943269e-05,  5.9540373e-05,  4.5532212e-05], dtype=float32)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pp[\"steps\"]"
+    "np.asarray(audio_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "49fb396d-dff3-427b-91a7-87fd5f6965e9",
+   "execution_count": 26,
+   "id": "47b68b40-8e7b-4f24-8d63-1c23ac39e647",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "audio_data2, _ = librosa.load(\n",
+    "    \"/srv/hays-lab/scratch/sanisetty3/motionx/audio/beat/1_wayne_0_1_1.wav\",\n",
+    "    sr=24000,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "49fb396d-dff3-427b-91a7-87fd5f6965e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1656000,)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "audio_data2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "aa8a710b-f299-4dd3-8f8d-f27e6727fd51",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "It is strongly recommended to pass the `sampling_rate` argument to this function. Failing to do so can result in silent errors that might be hard to debug.\n",
+      "/srv/hays-lab/flash5/sanisetty3/miniconda3/envs/tgm3d/lib/python3.9/site-packages/transformers/audio_utils.py:630: FutureWarning: The function `fram_wave` is deprecated and will be removed in version 4.31.0 of Transformers\n",
+      "  warnings.warn(\n",
+      "/srv/hays-lab/flash5/sanisetty3/miniconda3/envs/tgm3d/lib/python3.9/site-packages/transformers/audio_utils.py:698: FutureWarning: The function `stft` is deprecated and will be removed in version 4.31.0 of Transformers\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input_features': array([[[-15.394947  ,  -0.5703163 ,   3.5401433 , ..., -38.2861    ,\n",
+       "         -37.918972  , -37.939922  ],\n",
+       "        [-16.963102  ,   0.87034565,   9.158687  , ..., -43.59886   ,\n",
+       "         -46.195023  , -47.70651   ],\n",
+       "        [-21.283278  , -15.064988  ,   4.8064947 , ..., -44.900204  ,\n",
+       "         -40.166466  , -42.062     ],\n",
+       "        ...,\n",
+       "        [-39.50362   , -33.66943   , -16.775053  , ..., -26.694666  ,\n",
+       "         -32.130165  , -39.111378  ],\n",
+       "        [-44.719772  , -33.449722  , -16.37218   , ..., -29.7046    ,\n",
+       "         -35.740845  , -44.613018  ],\n",
+       "        [ -2.8099854 ,  -1.5159984 ,   1.72572   , ..., -40.363914  ,\n",
+       "         -42.63393   , -46.923767  ]]], dtype=float32), 'is_longer': [[True]]}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clamp_feature_extractor(raw_speech=audio_data)"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 37,
    "id": "ea148ed9-7111-4712-bb76-e208e834536e",
    "metadata": {
     "scrolled": true
@@ -300,22 +420,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d604f8c6-790b-4afd-ad56-ae27b2ef1d9e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8040d17c-5833-4f60-ae4f-7e715c838a79",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "87113efa-2469-42c1-bc6e-4f33ab2bfc23",
    "metadata": {},
    "outputs": [],
@@ -323,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "id": "25582b0e-91cd-46bb-8b24-b62ea958b478",
    "metadata": {},
    "outputs": [
@@ -357,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "id": "ee787b0d-03d7-47ec-994a-2307b1e14c15",
    "metadata": {},
    "outputs": [],
@@ -375,10 +479,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "id": "40c4a027-7d07-4414-b961-bce838aa9e68",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "It is strongly recommended to pass the `sampling_rate` argument to this function. Failing to do so can result in silent errors that might be hard to debug.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(29201972,)\n",
+      "(18208, 623)\n"
+     ]
+    }
+   ],
    "source": [
     "for batch in train_loader:\n",
     "    break"
@@ -386,27 +506,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "ddcea72e-e83a-4a83-940b-68af4d165c79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['beat/25_goto_1_2_2', 'beat/6_carla_0_53_53',\n",
-       "       'beat/4_lawrence_0_106_106', 'beat/11_nidal_0_116_116',\n",
-       "       'beat/18_daiki_0_13_13', 'beat/9_miranda_0_78_78',\n",
-       "       'beat/17_itoi_0_73_73', 'beat/5_stewart_0_8_8',\n",
-       "       'beat/5_stewart_0_65_65', 'beat/27_yingqing_0_16_16'], dtype='<U25')"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch[\"names\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9ef153-faac-4bc4-86cf-3597659f6743",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "batch[\"texts\"]"
    ]
   },
   {
